- rudimentary size specification for combobox widget - update mail demo to make TO field full width of screen (still have to fix IE bleed through problem though)
git-svn-id: http://svn.dojotoolkit.org/src/trunk/demos@2585 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/widget/Mail/mail.css
+++ b/widget/Mail/mail.css
@@ -7,11 +7,11 @@ html, body, #main{
 }
 
 /* list of messages */
-tr:hover, td:hover {
+#listPane tr:hover, #listPane td:hover {
 	background: gray;
 	cursor: pointer;
 }
-tr, td { cursor: pointer; }
+#listPane tr, #listPane td { cursor: pointer; }
 
 #topMenu {
 	background: #660000;
